@@ -1,5 +1,8 @@
 2007-05-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/iterators.R (print.igraph.es, print.igraph.vs) :
+	pretty printing
+
 	* interfaces/R/igraph/R/interface.R (get.edges) : added
 	* interfaces/R/src/rinterface.c (R_igraph_get_edges) : added
 
